# multiminer

./: .gitignore  CMakeLists.txt  README.md  algo-gate-api.c  algo-gate-api.h  cpu-miner.c  cpuminer-config.h.cmake  miner.h  util.c
algo/argon2/argon2d/: CMakeLists.txt  argon2d-gate.c  argon2d-gate.h  argon2d-gpu-gate.cpp  argon2d-gpu-gate.h
algo/argon2/argon2d/argon2-gpu/: CMakeLists.txt  README.md
algo/argon2/argon2d/argon2-gpu/data/kernels/: argon2_kernel.cl
algo/argon2/argon2d/argon2-gpu/ext/argon2/: CMakeLists.txt
algo/argon2/argon2d/argon2-gpu/ext/argon2/lib/: impl-select.c
algo/argon2/argon2d/argon2-gpu/include/argon2-cuda/: cudaexception.h  globalcontext.h  kernels.h  processingunit.h
algo/argon2/argon2d/argon2-gpu/include/argon2-gpu-common/: argon2-common.h  argon2params.h
algo/argon2/argon2d/argon2-gpu/include/argon2-opencl/: kernelrunner.h  opencl.h  processingunit.h  programcontext.h
algo/argon2/argon2d/argon2-gpu/lib/argon2-cuda/: blake2b.cu  globalcontext.cpp  kernels.cu  processingunit.cpp  programcontext.cpp
algo/argon2/argon2d/argon2-gpu/lib/argon2-gpu-common/: argon2params.cpp  blake2b.cpp  blake2b.h
algo/argon2/argon2d/argon2-gpu/lib/argon2-opencl/: device.cpp  kernelloader.cpp  kernelrunner.cpp  processingunit.cpp  programcontext.cpp
algo/argon2/argon2d/argon2-gpu/scripts/: benchmark-commits-v2.sh  benchmark-commits.sh  ci-build.sh  ci-test.sh  ci-update-pocl.sh  compare-commits-v2.R  compare_commits.R  for-commits.sh  gpu-vs-cpu-v2.R  gpu_vs_cpu.R  run-benchmark-m_cost.sh  run-benchmark-t_cost.sh  run-benchmark.sh
algo/argon2/argon2d/argon2-gpu/scripts/metacentrum/: start-benchmark-common.sh  start-benchmark-cpu.sh  start-benchmark-gpu.sh
algo/argon2/argon2d/argon2-gpu/scripts/metacentrum-v2/: start-benchmark-common.sh  start-benchmark-cpu.sh  start-benchmark-gpu.sh
algo/argon2/argon2d/argon2-gpu/src/argon2-gpu-bench/: benchmark.cpp  benchmark.h  cpuexecutive.cpp  cudaexecutive.cpp  main.cpp  openclexecutive.cpp  pwgen.h
algo/argon2/argon2d/argon2-gpu/src/argon2-gpu-test/: main.cpp  testcase.cpp  testcase.h  testparams.h  testvectors.h
algo/blake/: sph-blake2s.c
compat/: winansi.c
